--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -7,6 +7,12 @@
   padding: 24px;
 }
 
+.infoCardContainer {
+  max-width: 1260px;
+  padding: 0;
+  margin: 0;
+}
+
 .infoCardCallActionContainer :global(.vtex-button) {
   color: white;
   background-color: gray;
